Refactor movie card component HTML and SCSS

--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,6 +1,6 @@
-<mat-card (click)="movieClicked.emit(info.title)">
+<mat-card (click)="movieClicked.emit(info.title)" class="card">
   <mat-card-header>
-    <mat-card-title>{{ info.title }}</mat-card-title>
+    <mat-card-title class="title">{{ info.title }}</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     @if (info.poster_path) {
@@ -9,7 +9,7 @@
       class="img-fluid"
     />
     }
-    <p>Date: {{ info.release_date | date : "dd MMM yyyy" }}</p>
+    <p class="mt-2">Date: {{ info.release_date | date : "dd MMM yyyy" }}</p>
     <p>Rating: {{ info.vote_average }}</p>
   </mat-card-content>
 </mat-card>
