Update styles and add movie details page

--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,4 +1,4 @@
-<mat-card (click)="movieClicked.emit(info.title)" class="card">
+<mat-card (click)="movieClicked.emit(info.id)" class="card">
   <mat-card-header>
     <mat-card-title class="title">{{ info.title }}</mat-card-title>
   </mat-card-header>
