--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
   >
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Movies</span>
+  <span [routerLink]="['/home']" class="pointer">Movies</span>
   <span class="example-spacer"></span>
   <button
     mat-icon-button
